Implemented save() on model instances.

--- a/.jshintrc
+++ b/.jshintrc
@@ -46,7 +46,9 @@ More info:
   "predef": [
     "describe",
     "should",
-	"it"
+	"it",
+	"before",
+	"after"
   ],
 
   /*** Enforcing options ***/
