Added tests for updating model instances which didn't require code changes.

--- a/.jshintrc
+++ b/.jshintrc
@@ -48,7 +48,9 @@ More info:
     "should",
 	"it",
 	"before",
-	"after"
+	"after",
+	"beforeEach",
+	"afterEach"
   ],
 
   /*** Enforcing options ***/
