--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
 	},
 	"dependencies": {
 		"mongojs": "0.9.x",
-		"hooks": "git://github.com/JamesHight/hooks-js.git",
+		"fn-hooks": "0.1.x",
 		"underscore": "1.4.x",
 		"async": "0.2.x"
 	},
